recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: ';' expected but symbol literal found.
	shrink*length à l'étage N+1
                         ^Tree:15: error: ';' expected but ',' found.
Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée, 
                                      ^Tree:17: error: ';' expected but symbol literal found.
gauche de deux fois l'angle indiqué, faire un autre arbre à 3 étages, puis revenir
                     ^Tree:18: error: ';' expected but '.' found.
à sa position initiale. N'oubliez pas de revenir à la position initiale !
                      ^